# ChangeLog for x11-drivers/xf86-video-openchrome
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-drivers/xf86-video-openchrome/ChangeLog,v 1.73 2013/10/08 05:06:29 ago Exp $

  08 Oct 2013; Agostino Sarubbo <ago@gentoo.org>
  xf86-video-openchrome-0.3.3.ebuild:
  Stable for x86, wrt bug #475480

  29 Sep 2013; Agostino Sarubbo <ago@gentoo.org>
  xf86-video-openchrome-0.3.3.ebuild:
  Stable for amd64, wrt bug #475480

*xf86-video-openchrome-0.3.3 (23 May 2013)

  23 May 2013; Chí-Thanh Christopher Nguyễn <chithanh@gentoo.org>
  +xf86-video-openchrome-0.3.3.ebuild:
  Version bump for security bug 471098.

  28 Mar 2013; Chí-Thanh Christopher Nguyễn <chithanh@gentoo.org>
  xf86-video-openchrome-0.3.2.ebuild:
  Use correct ebuild phase to set XORG_CONFIGURE_OPTIONS

*xf86-video-openchrome-0.3.2 (28 Mar 2013)

  28 Mar 2013; Chí-Thanh Christopher Nguyễn <chithanh@gentoo.org>
  +xf86-video-openchrome-0.3.2.ebuild,
  -files/xf86-video-openchrome-0.2.906-xorg-1.12.patch,
  -xf86-video-openchrome-0.2.905.ebuild, -xf86-video-openchrome-0.2.906.ebuild,
  -xf86-video-openchrome-0.3.0.ebuild:
  Version bump.

  18 Nov 2012; Agostino Sarubbo <ago@gentoo.org>
  xf86-video-openchrome-0.3.1.ebuild:
  Stable for x86, wrt bug #440872

  16 Nov 2012; Agostino Sarubbo <ago@gentoo.org>
  xf86-video-openchrome-0.3.1.ebuild:
  Stable for amd64, wrt bug #440872

*xf86-video-openchrome-0.3.1 (06 Sep 2012)

  06 Sep 2012; Chí-Thanh Christopher Nguyễn <chithanh@gentoo.org>
  +xf86-video-openchrome-0.3.1.ebuild:
  Version bump.

  07 Aug 2012; Jeroen Roovers <jer@gentoo.org> metadata.xml:
  Drop maintainership.

*xf86-video-openchrome-0.3.0 (27 Jul 2012)

  27 Jul 2012; Jeroen Roovers <jer@gentoo.org>
  -xf86-video-openchrome-0.2.906_p20120726.ebuild,
  +xf86-video-openchrome-0.3.0.ebuild:
  Version bump.

*xf86-video-openchrome-0.2.906_p20120726 (26 Jul 2012)

  26 Jul 2012; Jeroen Roovers <jer@gentoo.org>